Fixed shadow and underbanner misalignment

--- a/reusable/style.css
+++ b/reusable/style.css
@@ -5,9 +5,9 @@
     background-color: #1e1f1c;
     display: flex;
     min-height: 1000%;
-    top: 95px;
+    top: 96px;
     z-index: bottom;
-    box-shadow: inset 0 5px 6px -6px black;
+    box-shadow: inset 0 5px 6px -5px black;
     overflow-y: hidden;
     flex-direction: column;
     flex: 1;
@@ -54,7 +54,7 @@ body {
     flex-direction: row;
     justify-content: center;
     position: absolute;
-    top: 94px;
+    top: 95px;
     min-height: 90%;
     align-content: center;
     z-index: bottom;
